Allow user to search movies, as well as to filter them and sort them

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -6,13 +6,19 @@
   display: inline-block;
   font-size: 13px;
   cursor: pointer;
-  margin-top: 1rem;
+  margin: 1rem;
   text-transform: uppercase;
+  min-height: 38px;
 }
 
 .button:hover {
   opacity: 0.9;
   color: black;
+}
+
+.primary {
+  background-color: steelblue;
+  color: white;
 }
 
 .success {
